[package]
name = "ldtk"
version = "0.2.0"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "A crate for reading the LDtk 2D tile map format."
repository = "https://github.com/katharostech/LDtk-rs"
documentation = "https://docs.rs/ldtk"
readme = "README.md"
keywords = ["gamedev", "map-editor", "tile", "json", "2D"]
categories = [
    "games",
    "game-development",
    "parser-implementations"
]

[features]
default = []
download-schema = ["isahc"]

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"

[build-dependencies]
heck = "0.3.2"
quote = "1.0.8"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
isahc = { version = "1.0.3", features = ["json"], optional = true }
