[package]
name = "ldtk"
version = "0.4.0"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "A crate for reading the LDtk 2D tile map format."
repository = "https://github.com/katharostech/LDtk-rs"
documentation = "https://docs.rs/ldtk"
readme = "README.md"
keywords = ["gamedev", "map-editor", "tile", "json", "2D"]
categories = [
    "games",
    "game-development",
    "parser-implementations"
]

[features]
# By default no features are included, you *must* specify one of the below features
default = []

# Specify one of these features to use a crate built-in schema
'ldtk-v0.7.0' = ["local-schema"]
'ldtk-v0.8.1' = ["local-schema"]
'ldtk-v0.9.3' = ["local-schema"]

# Or specify this feature to download the schema automatically from GitHub
download-schema = ["isahc"]

# Helper feature you don't provide directly
local-schema = []

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"

[build-dependencies]
heck = "0.3.2"
quote = "1.0.8"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
isahc = { version = "1.0.3", features = ["json"], optional = true }
